# github-tui

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AiInsightsCard.jsx  MetricsGrid.jsx  ProfileCard.jsx  RepoTable.jsx  SearchForm.jsx
frontend/src/utils/: formatters.js
scripts/: boot.sh  demo_check.sh  generate_readme_screenshots.py  ramp_up.sh  validate_all.sh
src/github_insights/: __init__.py  cli.py
src/github_insights/api/: __init__.py  client.py  curl_client.py  exceptions.py  factory.py  httpx_client.py  utils.py
src/github_insights/core/: __init__.py  ai_insights.py  metrics.py  models.py  service.py
src/github_insights/ui/: __init__.py  app.py
src/github_insights/web/: __init__.py  __main__.py  app.py  schemas.py
tests/: test_ai_insights.py  test_factory.py  test_metrics.py  test_service.py  test_web_api.py
