[project]
name = "octolens"
version = "0.1.0"
description = "OctoLens: a clean terminal UI for GitHub profile and repository intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.131.0",
  "httpx>=0.27.0",
  "pydantic-ai>=1.62.0",
  "textual>=0.58.1",
  "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]
